--- a/PerfomanceComputersNetwork/PCN.WebAdminPanel/wwwroot/index.html
+++ b/PerfomanceComputersNetwork/PCN.WebAdminPanel/wwwroot/index.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>PCN. Admin Panel</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
   <!--Bower-->
   <script src="lib/jquery/dist/jquery.min.js"></script>
@@ -11,39 +12,66 @@
   <script src="lib/angular-aria/angular-aria.min.js"></script>
   <script src="lib/angular-cookies/angular-cookies.min.js"></script>
   <script src="lib/angular-material/angular-material.min.js"></script>
-  <link href="lib/angular-material/angular-material.min.css" rel="stylesheet" />
+  <link href="lib/angular-material/angular-material.min.css" rel="stylesheet"/>
   <script src="lib/angular-messages/angular-messages.min.js"></script>
   <script src="lib/angular-resource/angular-resource.min.js"></script>
   <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-  <link href="styles/styles.css" rel="stylesheet" />
+  <link href="styles/styles.css" rel="stylesheet"/>
 
   <script src="app/pcn.module.js"></script>
   <script src="app/admin.service.js"></script>
   <script src="app/admin.controller.js"></script>
 </head>
-<body ng-app="pcnApp" ng-controller="adminController" layout="column">
+<body ng-app="pcnApp" ng-controller="adminController">
 <md-toolbar layout="row" layout-align="start center">
-  <span class="md-headline" style="margin-left: 340px;" ng-hide="buttonIndex == null">Computer #{{buttonIndex + 1}}: {{currentIp}}</span>
+  <span class="md-headline" style="margin-left: 340px;" ng-hide="buttonIndex == null">Компьютер №{{buttonIndex + 1}}: {{currentIp}}</span>
 </md-toolbar>
 <div layout="row">
   <md-sidenav style="min-height: calc(100vh - 64px);" class="md-sidenav-left md-whiteframe-z1" md-component-id="left" md-is-locked-open="true" layout="column">
     <div ng-repeat="info in infos track by $index" ng-class="{'button-active': buttonIndex === $index}">
-      <md-button style="margin: 0; width: 320px; padding: 6px 25px" ng-click="showComputer($index, info.id, info.ip)">
+      <md-button style="margin: 0; padding: 6px 25px; width: 320px;" ng-click="showComputer($index, info.id, info.ip)">
         <div layout="column">
-          <span style="text-align: left; height: 18px;">{{info.ip}}</span>
-          <span style="text-align: left; font-size: 11px; color: #ABABAB;">{{info.id}}</span>
+          <span style="height: 18px; text-align: left;">{{info.ip}}</span>
+          <span style="color: #ABABAB; font-size: 11px; text-align: left;">{{info.id}}</span>
         </div>
       </md-button>
     </div>
   </md-sidenav>
   <div flex layout="row">
-    <div flex="15"></div>
-    <md-card style="margin: 40px 0" class="md-padding" flex>
-      e
+    <md-card style="margin: 40px" class="md-padding" flex ng-hide="buttonIndex == null">
+      <div layout="column">
+        <span class="md-title" style="margin: 5px 0">Характеристики компьютера</span>
+        <div layout="row" style="margin: 5px 0">
+          <span flex="25">IP адрес</span>
+          <span flex>{{compDetails.Ip}}</span>
+        </div>
+        <div layout="row" style="margin: 5px 0">
+          <span flex="25">Процессор</span>
+          <span flex>{{compDetails.ProcessorName}}</span>
+        </div>
+        <div layout="row" style="margin: 5px 0">
+          <span flex="25">Видеоадаптер</span>
+          <span flex>{{compDetails.VideoController}}</span>
+        </div>
+        <div layout="row" style="margin: 5px 0">
+          <span flex="25">Аудиоадаптер</span>
+          <span flex>{{compDetails.SoundDevice}}</span>
+        </div>
+      </div>
+      <md-divider style="margin: 15px 0 20px 0"></md-divider>
+      <div layout="column">
+        <span class="md-title">Использование процессора</span>
+        <div id="cpu_chart_div"></div>
+      </div>
+      <md-divider style="margin: 20px 0"></md-divider>
+      <div layout="column">
+        <span class="md-title">Использование оперативной памяти</span>
+        <div id="ram_chart_div"></div>
+      </div>
     </md-card>
-    <div flex="15"></div>
- </div>
+  </div>
 </div>
 </body>
 </html>
